# nightmare-firmware

./: .gitignore  .gitmodules  README.md
atmega32u4_firmware/: platformio.ini
atmega32u4_firmware/src/: main.cpp  main.ino
attiny402_firmware/: platformio.ini
attiny402_firmware/lib/led/: led.h
attiny402_firmware/lib/serial/: serial.cpp  serial.h
attiny402_firmware/src/: led.cpp  led.h  main.ino  serial.cpp  serial.h
nightmare_firmware/: definitions.h  nightmare_firmware.ino  servos.cpp  servos.h  utils.cpp  utils.h
rp2040/: .gitignore  CMakeLists.txt  platformio.ini
rp2040/include/: tusb_config.h
rp2040/src/: gy953.c  gy953.h  main.c  sensors.c  sensors.h  tusb_config.h  usb-descriptors.c  usb-serial.c  usb-serial.h
